# geometry

./: .gitignore  CMakeLists.txt  README.md
inc/: cgal.hpp  curve.hpp
src/: curve.cpp  main.cpp
testdata/: dataset.txt  file-0.txt  file-1.txt
testdata/trivial/: file-0.txt  file-1.txt
